Add google tracking

--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script
+			async
+			src="https://www.googletagmanager.com/gtag/js?id=UA-148968605-1"
+		></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag() {
+				dataLayer.push(arguments);
+			}
+			gtag("js", new Date());
+
+			gtag("config", "UA-148968605-1");
+		</script>
+
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<title>Karma Trade</title>
 		<meta
@@ -42,8 +57,12 @@
 					<p>
 						Follow us on social media
 					</p>
-					<a class="instagram" href="https://www.instagram.com/karma.trade/">instagram</a>
-					<a class="facebook" href="https://www.facebook.com/swapkarma/">facebook</a>
+					<a class="instagram" href="https://www.instagram.com/karma.trade/"
+						>instagram</a
+					>
+					<a class="facebook" href="https://www.facebook.com/swapkarma/"
+						>facebook</a
+					>
 					<p>
 						Sign up for updates
 					</p>
