Update mailchimp action

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<!-- Begin Mailchimp Signup Form -->
 						<div id="mc_embed_signup">
 							<form
-								action="https://gmail.us17.list-manage.com/subscribe/post?u=7e9d5507779760ec682e6f3d0&amp;id=2c109ee208"
+                action="https://shop.us19.list-manage.com/subscribe/post?u=d87709cf30d6b42e99af07a4a&id=41c6a27c80"
 								method="post"
 								id="mc-embedded-subscribe-form"
 								name="mc-embedded-subscribe-form"
