Fix mailchimp link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<!-- Begin Mailchimp Signup Form -->
 						<div id="mc_embed_signup">
 							<form
-                action="https://shop.us19.list-manage.com/subscribe/post?u=d87709cf30d6b42e99af07a4a&id=41c6a27c80"
+								action="https://shop.us19.list-manage.com/subscribe/post?u=d87709cf30d6b42e99af07a4a&amp;id=41c6a27c80"
 								method="post"
 								id="mc-embedded-subscribe-form"
 								name="mc-embedded-subscribe-form"
@@ -89,6 +89,26 @@
 											placeholder="Email Address"
 										/>
 									</div>
+									<!-- <div class="mc-field-group">
+										<input
+											type="text"
+											value=""
+											name="FNAME"
+											class=""
+											id="mce-FNAME"
+											placeholder="First Name"
+										/>
+									</div>
+									<div class="mc-field-group">
+										<input
+											type="text"
+											value=""
+											name="LNAME"
+											class=""
+											id="mce-LNAME"
+											placeholder="Last Name"
+										/>
+									</div> -->
 									<div id="mce-responses" class="clear">
 										<div
 											class="response"
@@ -108,21 +128,24 @@
 									>
 										<input
 											type="text"
-											name="b_7e9d5507779760ec682e6f3d0_2c109ee208"
+											name="b_d87709cf30d6b42e99af07a4a_41c6a27c80"
 											tabindex="-1"
 											value=""
 										/>
 									</div>
-									<input
-										type="submit"
-										value="Subscribe"
-										name="subscribe"
-										id="mc-embedded-subscribe"
-										class="button"
-									/>
+									<div class="clear">
+										<input
+											type="submit"
+											value="Subscribe"
+											name="subscribe"
+											id="mc-embedded-subscribe"
+											class="button"
+										/>
+									</div>
 								</div>
 							</form>
 						</div>
+
 						<!--End mc_embed_signup-->
 					</div>
 				</div>
